# models

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  _typos.toml
.github/workflows/: rust.yml
albert-burn/: Cargo.toml  README.md
albert-burn/benches/: inference.rs
albert-burn/examples/: inference.rs
albert-burn/scripts/: generate_reference.py
albert-burn/src/: embedding.rs  encoder.rs  lib.rs  loader.rs  model.rs  tokenize.rs
albert-burn/tests/: integration_test.rs
bert-burn/: Cargo.toml  LICENSE-APACHE  README.md
bert-burn/examples/: infer-embedding.rs  masked.rs
bert-burn/src/: bert.rs  embedding.rs  fill_mask.rs  lib.rs  loader.rs  model.rs  pooler.rs
bert-burn/src/data/: batcher.rs  mod.rs  tokenizer.rs
deepseek-r1-burn/: Cargo.toml  NOTICES.md  README.md
deepseek-r1-burn/examples/: finetune.rs  generate.rs  save_load.rs
deepseek-r1-burn/src/: config.rs  lib.rs  model.rs  tokenizer.rs  training.rs
llama-burn/: Cargo.toml  NOTICES.md  README.md
llama-burn/examples/: chat.rs  generate.rs  test_tiny.rs
llama-burn/src/: backend.rs  cache.rs  lib.rs  llama.rs  pretrained.rs  sampling.rs  tokenizer.rs  transformer.rs
llama-burn/src/tokenizer/: base.rs  mod.rs  sentence_piece.rs  tiktoken.rs
minilm-burn/: Cargo.toml  README.md
minilm-burn/benches/: inference.rs
minilm-burn/examples/: inference.rs
minilm-burn/scripts/: debug_embeddings.py  generate_reference.py
minilm-burn/src/: embedding.rs  lib.rs  loader.rs  model.rs  pooling.rs
minilm-burn/tests/: integration_test.rs
mobilenet-burn/: Cargo.toml
mobilenet-burn/src/model/: conv_norm.rs  inverted_residual.rs  mobilenet.rs  mod.rs  utils.rs  weights.rs
mobilenetv2-burn/: Cargo.toml  NOTICES.md  README.md
mobilenetv2-burn/examples/: inference.rs
mobilenetv2-burn/src/model/: conv_norm.rs  imagenet.rs  inverted_residual.rs  mobilenetv2.rs  mod.rs  weights.rs
resnet-burn/: Cargo.toml  NOTICES.md  README.md
resnet-burn/examples/: inference.rs
resnet-burn/examples/finetune/: .gitignore  Cargo.toml
resnet-burn/examples/finetune/examples/: finetune.rs
resnet-burn/examples/finetune/src/: data.rs  dataset.rs  inference.rs  lib.rs  training.rs
resnet-burn/examples/inference/: Cargo.toml
resnet-burn/examples/inference/examples/: inference.rs
resnet-burn/examples/inference/src/: imagenet.rs  lib.rs
resnet-burn/resnet/: Cargo.toml
resnet-burn/resnet/src/: block.rs  lib.rs  resnet.rs
resnet-burn/src/: lib.rs  resnet.rs  training.rs
resnet-burn/src/model/: block.rs  imagenet.rs  mod.rs  resnet.rs  weights.rs
squeezenet-burn/: Cargo.toml  README.md  build.rs
squeezenet-burn/examples/: classify.rs
squeezenet-burn/src/: lib.rs
squeezenet-burn/src/model/: normalizer.rs  squeezenet1.rs
tts-burn/: Cargo.toml  README.md
tts-burn/examples/: basic_synthesis.rs  load_checkpoint.rs  training.rs
tts-burn/src/: attention.rs  audio.rs  error.rs  lib.rs  preprocess.rs  train.rs  vocoder.rs
yolox-burn/: .gitignore  Cargo.toml  NOTICES.md  README.md
yolox-burn/examples/: inference.rs  training.rs
yolox-burn/src/: lib.rs
yolox-burn/src/dataset/: coco.rs  mod.rs
yolox-burn/src/model/: blocks.rs  bottleneck.rs  boxes.rs  darknet.rs  head.rs  mod.rs  pafpn.rs  weights.rs  yolox.rs
