[package]
authors = ["Dilshod Tadjibaev (@antimora)"]
license = "MIT OR Apache-2.0"
name = "albert-burn"
version = "0.1.0"
edition = "2024"
description = "ALBERT masked language model with Burn"

[features]
default = ["pretrained"]
pretrained = ["burn/network", "dep:dirs", "dep:hf-hub"]

# Backend selection
ndarray = ["burn/ndarray"]
tch-cpu = ["burn/tch"]
tch-gpu = ["burn/tch"]
wgpu = ["burn/wgpu"]
cuda = ["burn/cuda"]

[dependencies]
burn = { git = "https://github.com/antimora/burn.git", branch = "feat/nn/transformer", default-features = false, features = ["std"] }
burn-store = { git = "https://github.com/antimora/burn.git", branch = "feat/nn/transformer", features = ["std", "safetensors"] }

# Tokenizer
tokenizers = { version = "0.19.1", default-features = false, features = ["onig"] }

# HuggingFace model download
hf-hub = { version = "0.4.3", optional = true }
dirs = { version = "6.0.0", optional = true }

# Serialization
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = "1.0"

[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
divan = "0.1"

[[bench]]
name = "inference"
harness = false
required-features = ["pretrained", "ndarray"]

[[example]]
name = "inference"
required-features = ["pretrained", "ndarray"]
