[package]
authors = ["Dilshod Tadjibaev (@antimora)"]
name = "albert-burn"
version = "0.1.0"
edition = "2024"
license.workspace = true
description = "ALBERT masked language model with Burn"

[features]
default = ["pretrained"]
pretrained = ["burn/network", "dep:dirs", "dep:hf-hub"]

[dependencies]
burn       = { workspace = true, features = ["std"] }
burn-store = { workspace = true, features = ["std", "safetensors"] }

tokenizers = { workspace = true, features = ["onig"] }
hf-hub     = { workspace = true, optional = true }
dirs       = { workspace = true, optional = true }
serde      = { workspace = true, features = ["derive", "alloc"] }
serde_json = { workspace = true }

[dev-dependencies]
burn-flex = { workspace = true }
clap      = { workspace = true }
divan     = { workspace = true }

[[bench]]
name = "inference"
harness = false
required-features = ["pretrained"]

[[example]]
name = "inference"
required-features = ["pretrained"]
