[package]
authors = ["Aasheesh Singh aasheeshdtu@gmail.com"]
license = "MIT OR Apache-2.0"
name = "bert-burn"
version = "0.2.0"
edition = "2021"

[features]
default = []
f16 = []
flex = ["dep:burn-flex"]
tch-cpu = ["burn/tch"]
tch-gpu = ["burn/tch"]
wgpu = ["burn/wgpu"]
cuda = ["burn/cuda"]
fusion = ["burn/fusion"]
# To be replaced by burn-safetensors once supported: https://github.com/tracel-ai/burn/issues/626
safetensors = ["candle-core/default"]


[dependencies]
# Burn
burn = { version = "0.21.0-pre.3", default-features = false, features = [
  "dataset",
  "std",
] }
burn-flex = { version = "0.21.0-pre.3", optional = true }
candle-core = { version = "0.9" }
# Tokenizer
tokenizers = { version = "0.22", default-features = false, features = [
  "onig",
  "http",
] }
derive-new = "0.7"
hf-hub = { version = "0.5", features = ["tokio"] }

# Utils
serde = { version = "1.0", features = ["std", "derive"] }
libm = "0.2"
serde_json = "1.0"
tokio = "1"
