[package]
authors = ["Aasheesh Singh aasheeshdtu@gmail.com"]
name = "bert-burn"
version = "0.2.0"
edition = "2021"
license.workspace = true

[features]
default = []
safetensors = ["candle-core/default"]

[dependencies]
burn        = { workspace = true, features = ["dataset", "std"] }
candle-core = { workspace = true }

tokenizers = { workspace = true, features = ["onig", "http"] }
derive-new = { workspace = true }
hf-hub     = { workspace = true, features = ["tokio"] }

serde      = { workspace = true, features = ["std", "derive"] }
serde_json = { workspace = true }
libm       = { workspace = true }
tokio      = { workspace = true }

[dev-dependencies]
burn-flex = { workspace = true }
