[package]
authors = ["Aasheesh Singh aasheeshdtu@gmail.com"]
name = "bert-burn"
version = "0.2.0"
edition = "2021"
license.workspace = true

[features]
default = []

[dependencies]
burn       = { workspace = true, features = ["dataset", "std"] }
burn-store = { workspace = true, features = ["std", "safetensors"] }

tokenizers = { workspace = true, features = ["onig", "http"] }
derive-new = { workspace = true }
hf-hub     = { workspace = true }

serde      = { workspace = true, features = ["std", "derive"] }
serde_json = { workspace = true }
libm       = { workspace = true }

[dev-dependencies]
burn-flex = { workspace = true }
