[package]
authors = ["guillaumelagrange <lagrange.guillaume.1@gmail.com>"]
name = "llama-burn"
version = "0.1.0"
edition = "2021"
license.workspace = true
description = "Llama 3 large language model with Burn"

[features]
default = ["pretrained"]
pretrained = ["burn/network", "dep:dirs"]

llama3 = ["dep:tiktoken-rs", "dep:rustc-hash", "dep:base64"]
tiny   = ["dep:tokenizers"]

# Import pytorch/safetensors weights
import = ["burn-store/pytorch", "burn-store/safetensors"]

[dependencies]
burn       = { workspace = true, features = ["std"] }
burn-store = { workspace = true, features = ["std", "burnpack"] }

itertools = { workspace = true, features = ["use_alloc"] }
dirs      = { workspace = true, optional = true }
serde     = { workspace = true, features = ["derive", "alloc"] }

# Tiktoken tokenizer (llama 3)
tiktoken-rs = { workspace = true, optional = true }
base64      = { workspace = true, optional = true }
rustc-hash  = { workspace = true, optional = true } # must match tiktoken-rs

# SentencePiece tokenizer (tiny llama / llama 2)
tokenizers = { workspace = true, features = ["onig"], optional = true }

rand = { workspace = true, features = ["alloc", "std_rng"] }

[dev-dependencies]
burn-flex = { workspace = true }
clap      = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "chat"
required-features = ["llama3", "pretrained"]

[[example]]
name = "test_tiny"
required-features = ["tiny", "import"]
