[package]
authors = ["Arjun31415", "guillaumelagrange <lagrange.guillaume.1@gmail.com>"]
license = "MIT OR Apache-2.0"
name = "mobilenetv2-burn"
version = "0.1.0"
edition = "2021"

[features]
default = []
std = []
pretrained = ["burn/network", "std", "dep:dirs"]

[dependencies]
# Note: default-features = false is needed to disable std
burn = { git = "https://github.com/tracel-ai/burn.git", rev = "c729401fb268ae0451ed2695f1b31653fb9207de", default-features = false }
burn-import = { git = "https://github.com/tracel-ai/burn.git", rev = "c729401fb268ae0451ed2695f1b31653fb9207de" }
dirs = { version = "5.0.1", optional = true }
serde = { version = "1.0.192", default-features = false, features = [
  "derive",
  "alloc",
] } # alloc is for no_std, derive is needed

[dev-dependencies]
burn = { git = "https://github.com/tracel-ai/burn.git", rev = "c729401fb268ae0451ed2695f1b31653fb9207de", features = [
  "ndarray",
] }
image = { version = "0.24.7", features = ["png", "jpeg"] }
