[package]
authors = ["Arjun31415", "guillaumelagrange <lagrange.guillaume.1@gmail.com>"]
license = "MIT OR Apache-2.0"
name = "mobilenetv2-burn"
version = "0.1.0"
edition = "2021"

[features]
default = []
std = []
pretrained = ["burn/network", "std", "dep:dirs", "dep:burn-store"]

[dependencies]
# Note: default-features = false is needed to disable std
burn = { version = "0.21.0-pre.3" }
burn-store = { version = "0.21.0-pre.3", features = ["std", "pytorch"], optional = true }
dirs = { version = "6", optional = true }
serde = { version = "1", default-features = false, features = [
  "derive",
  "alloc",
] } # alloc is for no_std, derive is needed

[dev-dependencies]
burn = { version = "0.21.0-pre.3", features = ["ndarray"] }
image = { version = "0.25", features = ["png", "jpeg"] }

[[example]]
name = "inference"
required-features = ["pretrained"]
