[package]
authors = ["guillaumelagrange <lagrange.guillaume.1@gmail.com>"]
license = "MIT OR Apache-2.0"
name = "resnet-burn"
version = "0.1.0"
edition = "2021"

[features]
default = []
std = []
pretrained = ["burn/network", "std", "dep:dirs"]

[dependencies]
# Note: default-features = false is needed to disable std
burn = { path = "../../burn/crates/burn", default-features = false }
burn-import = { path = "../../burn/crates/burn-import" }
dirs = { version = "5.0.1", optional = true }
serde = { version = "1.0.192", default-features = false, features = [
    "derive",
    "alloc",
] } # alloc is for no_std, derive is needed

[dev-dependencies]
burn = { path = "../../burn/crates/burn", features = [
    "ndarray",
] }
image = { version = "0.24.7", features = ["png", "jpeg"] }
