[workspace]
# Try
# require version 2 to avoid "feature" additiveness for dev-dependencies
# https://doc.rust-lang.org/cargo/reference/resolver.html#feature-resolver-version-2
resolver = "2"

members = ["resnet", "examples/*"]

[workspace.package]
edition = "2021"
version = "0.2.0"
readme = "README.md"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Note: default-features = false is needed to disable std
burn = { version = "0.19.0", default-features = false }
burn-import = { version = "0.19.0", default-features = false, features = [
    "pytorch",
] }
dirs = "5.0.1"
serde = { version = "1.0.192", default-features = false, features = [
    "derive",
    "alloc",
] } # alloc is for no_std, derive is needed
