[package]
authors = ["guillaumelagrange <lagrange.guillaume.1@gmail.com>"]
name = "resnet-burn"
version = "0.2.0"
edition = "2021"
license.workspace = true
readme = "README.md"

[features]
default = []
std = []
pretrained = ["burn/network", "std", "dep:dirs", "dep:burn-store"]
train = ["burn/train"]

[dependencies]
burn       = { workspace = true }
burn-store = { workspace = true, features = ["std", "pytorch"], optional = true }
dirs       = { workspace = true, optional = true }
serde      = { workspace = true, features = ["derive", "alloc"] }
