[package]
authors = ["Dilshod Tadjibaev (@antimora)"]
license = "MIT OR Apache-2.0"
name = "squeezenet-burn"
version = "0.1.0"
edition = "2021"

[features]
default = ["weights_file"]

# Enables Half precision (f16) support
weights_f16 = []

# Embed weights into the binary
weights_embedded = []

# Use weights from a file
weights_file = ["burn/default"]


[dependencies]

# Note: default-features = false is needed to disable std
burn = { version = "0.10.0", default-features = false }

# Used to load weights from a file
serde = { version = "1.0.183", default-features = false, features = [
    "derive",
    "alloc",
] } # alloc is for no_std, derive is needed

[dev-dependencies]
# Used by the classify example
burn-ndarray = { version = "0.10.0", package = "burn-ndarray" }
image = { version = "0.24.7", features = ["png", "jpeg"] }

[build-dependencies]
# Used to generate code from ONNX model
burn-import = { version = "0.10.0", package = "burn-import" }
