[package]
authors = ["Dilshod Tadjibaev (@antimora)"]
name = "squeezenet-burn"
version = "0.1.0"
edition = "2021"
license.workspace = true

[features]
default = ["weights_file", "weights_file_dump"]
weights_f16 = []
weights_embedded = []
weights_file = ["burn/default"]
weights_file_dump = []

[dependencies]
burn       = { workspace = true }
burn-store = { workspace = true }
serde      = { workspace = true, features = ["derive", "alloc"] }

[dev-dependencies]
burn-flex = { workspace = true }
image     = { workspace = true, features = ["png", "jpeg"] }

[build-dependencies]
burn-onnx = { workspace = true }
