[package]
name = "tts-burn"
version = "0.1.0"
edition = "2021"
authors = ["Burn-rs/Models Contributors"]
description = "A text-to-speech model implementation using the Burn framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/burn-rs/models"
readme = "README.md"

[dependencies]
burn = { version = "0.12.0", features = ["train"] }
burn-ndarray = "0.12.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "tts_benchmark"
harness = false

[[example]]
name = "basic_synthesis"
path = "examples/basic_synthesis.rs"

[[example]]
name = "training"
path = "examples/training.rs"

[[example]]
name = "load_checkpoint"
path = "examples/load_checkpoint.rs" 