[package]
authors = ["guillaumelagrange <lagrange.guillaume.1@gmail.com>"]
license = "MIT OR Apache-2.0"
name = "yolox-burn"
version = "0.1.0"
edition = "2021"

[features]
default = []
std = []
pretrained = ["burn/network", "std", "dep:dirs", "dep:burn-store"]

[dependencies]
# Note: default-features = false is needed to disable std
burn = { version = "0.21.0-pre.3", default-features = false }
burn-store = { version = "0.21.0-pre.3", features = ["std", "pytorch"], optional = true }
itertools = { version = "0.14", default-features = false, features = [
    "use_alloc",
] }
dirs = { version = "6", optional = true }
serde = { version = "1", default-features = false, features = [
    "derive",
    "alloc",
] } # alloc is for no_std, derive is needed

[dev-dependencies]
burn = { version = "0.21.0-pre.3", features = ["ndarray"] }
image = { version = "0.25", features = ["png", "jpeg"] }

[[example]]
name = "inference"
required-features = ["pretrained"]
