[package]
authors = ["guillaumelagrange <lagrange.guillaume.1@gmail.com>"]
name = "finetune"
license.workspace = true
version.workspace = true
edition.workspace = true

[features]
default = ["burn/default"]
tch-gpu = ["burn/tch"]
wgpu = ["burn/wgpu"]
cuda = ["burn/cuda"]

[dependencies]
resnet-burn = { path = "../../resnet", features = ["pretrained", "train"] }
burn = { workspace = true, features = ["train", "vision", "network"] }

# Dataset files
csv = "1"
flate2 = "1"
rand = { version = "0.9", default-features = false, features = [
    "std_rng",
] }
serde = { version = "1", features = ["std", "derive"] }
tar = "0.4"