[package]
authors = ["guillaumelagrange <lagrange.guillaume.1@gmail.com>"]
name = "inference"
license.workspace = true
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
resnet-burn = { path = "../../resnet", features = ["pretrained"] }
burn = { workspace = true, features = ["ndarray"] }
burn-store = { workspace = true, features = ["burnpack"] }
image = { version = "0.24.9", features = ["png", "jpeg"] }

