[package]
authors = ["guillaumelagrange <lagrange.guillaume.1@gmail.com>"]
name = "inference"
license.workspace = true
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
resnet-burn = { path = "../../resnet", features = ["pretrained"] }
burn = { workspace = true }
burn-flex = "0.21.0-pre.3"
burn-store = { workspace = true, features = ["burnpack"] }
image = { version = "0.25", features = ["png", "jpeg"] }

