[package]
authors = ["guillaumelagrange <lagrange.guillaume.1@gmail.com>"]
name = "inference"
license.workspace = true
version = "0.2.0"
edition = "2021"
publish = false

[dependencies]
resnet-burn = { path = "../..", features = ["pretrained"] }
burn        = { workspace = true }
burn-flex   = { workspace = true }
burn-store  = { workspace = true, features = ["burnpack"] }
image       = { workspace = true, features = ["png", "jpeg"] }
